fix for contribute page spacing

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -5828,7 +5828,7 @@ blockquote {
         margin-right: 20px;
     }
     .contribute .panel-heading, .contribute .panel-body{
-        padding: 18px 1px;
+        padding: 1px;
     }
     .contribute .panel-heading h3{
         margin: 5px !important;
